--- a/app/templates/maquinas/novaMaquina.html
+++ b/app/templates/maquinas/novaMaquina.html
@@ -44,7 +44,7 @@
               </div>
               <div class="row">
                 {{ textAreaField(6,"Descrição",3,"Descrição","novaMaquina.descricao") }}
-                {{textField(3,"Valor","R$0.00","novaMaquina.preco") }}
+                {{numberField(3,"Valor","R$0.00","novaMaquina.preco") }}
                 {{checkField(3,"Ativo","ATIVO","INATIVO","novaMaquina.ativa")}}
               </div>
 
