--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% import "./macros/_macrosMenu.html" as macros with context %}
+{% import "./macros/_macros.html" as fields with context %}
 <!DOCTYPE html>
 <html>
 <head>
