--- a/app/templates/locadores/novoLocador.html
+++ b/app/templates/locadores/novoLocador.html
@@ -1,5 +1,3 @@
-{% from "./macros/_macros.html" import textField,selectField,button,textAreaField,pwdField,checkField %}
-
 {% extends 'base.html'%}
 
 {% block css %}
@@ -19,30 +17,30 @@
           <!-- /.card-header -->
           <div class="card-body">
               <div class="row">
-                {{textField(3,"Nome","Insira o nome do locador","locador.nome")}}
-                {{textField(3,"Telefone","Insira o Telefone do locador","locador.telefone")}}
-                {{selectField(3,"tipo Documento","Selecione o tipo do seu documento","x.tipo for x in documentos","locador.id_doc_type")}}
-                {{textField(3,"Nº do documento","Insira o nº do documento","locador.numero_documento")}}
+                {{ fields.textField(3,"Nome","Insira o nome do locador","locador.nome")}}
+                {{ fields.textField(3,"Telefone","Insira o Telefone do locador","locador.telefone")}}
+                {{ fields.selectField(3,"tipo Documento","Selecione o tipo do seu documento","x.tipo for x in documentos","locador.id_doc_type")}}
+                {{ fields.textField(3,"Nº do documento","Insira o nº do documento","locador.numero_documento")}}
               </div>
               <div class="row">
-                {{textField(3,"Email","Insira o email do locador","locador.email")}}
-                {{textField(3,"Local","nome do local","locador.local")}}
-                {{textField(6,"Endereco","Endereço do local","locador.endereco")}}
+                {{ fields.textField(3,"Email","Insira o email do locador","locador.email")}}
+                {{ fields.textField(3,"Local","nome do local","locador.local")}}
+                {{ fields.textField(6,"Endereco","Endereço do local","locador.endereco")}}
               </div>
               <hr>
               <div class="row">
-                {{textField(3,"Nome de Usuario","Usuario que o locatario ira se conectar ao sistema","locador.user_name")}}
-                {{pwdField(3,"Senha","senha do usuario","locador.senha")}}
-                {{pwdField(3,"Confirmação de Senha"," confirme a senha do usuario","locador.senha2")}}
-                {{checkField(3,"Ativo","ATIVO","INATIVO","locador.ativo")}}
+                {{ fields.textField(3,"Nome de Usuario","Usuario que o locatario ira se conectar ao sistema","locador.user_name")}}
+                {{ fields.pwdField(3,"Senha","senha do usuario","locador.senha")}}
+                {{ fields.pwdField(3,"Confirmação de Senha"," confirme a senha do usuario","locador.senha2")}}
+                {{ fields.checkField(3,"Ativo","ATIVO","INATIVO","locador.ativo")}}
               </div>
 
               <div class="row">
-                {{ textAreaField(12,"Observações",3,"Observações","locador.descricao") }}
+                {{ fields.textAreaField(12,"Observações",3,"Observações","locador.descricao") }}
               </div>
 
 
-              {{ button("CADASTRAR","cadastraLocador()","margin-top: 80px;") }}
+              {{ fields.button("CADASTRAR","cadastraLocador()","margin-top: 80px;") }}
 
           </div>
           <!-- /.card-body -->
