--- a/app/templates/maquinas/maquinas.html
+++ b/app/templates/maquinas/maquinas.html
@@ -62,7 +62,14 @@
         </div>
         <!-- /.card-header -->
         <div class="card-body table-responsive p-0">
-          <table class="table table-hover text-nowrap">
+
+          <div class="d-flex justify-content-center" style="margin: 10px;" ng-hide="lista">
+            <div class="spinner-border" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+
+          <table class="table table-hover text-nowrap" ng-show="lista">
             <thead>
               <tr>
                 <th>Local</th>
