--- a/app/templates/maquinas/novaMaquina.html
+++ b/app/templates/maquinas/novaMaquina.html
@@ -54,7 +54,7 @@
                 
               </div>
 
-              {{ fields.button("CADASTRAR","cadastraMaquina(novaMaquina)","") }}
+              {{ fields.button("CADASTRAR","cadastraMaquina(novaMaquina)","","loading") }}
 
           </div>
           <!-- /.card-body -->
@@ -88,7 +88,7 @@
           </div>
 
 
-          {{ fields.button("CADASTRAR TEMA","cadastraTema(NovoTemaValue)","") }}
+          {{ fields.button("CADASTRAR TEMA","cadastraTema(NovoTemaValue)","","loadingTema") }}
 
         </div>
         
