--- a/app/templates/usuarios/novoUsuario.html
+++ b/app/templates/usuarios/novoUsuario.html
@@ -34,7 +34,7 @@
               </div>
 
 
-              {{fields.button("CADASTRAR","cadastraUsuario()","margin-top: 80px;") }}
+              {{fields.button("CADASTRAR","cadastraUsuario()","margin-top: 80px;","loading") }}
 
           </div>
           <!-- /.card-body -->
