--- a/app/templates/maquinas/maquinas.html
+++ b/app/templates/maquinas/maquinas.html
@@ -63,13 +63,13 @@
         <!-- /.card-header -->
         <div class="card-body table-responsive p-0">
 
-          <div class="d-flex justify-content-center" style="margin: 10px;" ng-hide="lista">
+          <div class="d-flex justify-content-center" style="margin: 10px;" ng-hide="lista.length">
             <div class="spinner-border" role="status">
               <span class="sr-only">Loading...</span>
             </div>
           </div>
 
-          <table class="table table-hover text-nowrap" ng-show="lista">
+          <table class="table table-hover text-nowrap" ng-show="lista.length">
             <thead>
               <tr>
                 <th>Local</th>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
-                    {{fields.buttonSquare("Gerar Token","gerarToken()","") }}
+                    {{fields.buttonSquare("Gerar Token","gerarToken()","","loadingToken") }}
                   </div>
                 </div>
               </div>
@@ -148,7 +148,7 @@
               {{fields.textAreaField(12,"Token",2,"","token") }}
             </div>
 
-            {{fields.button("Salvar","AlterarMaquina()","margin-top:80px") }}
+            {{fields.button("Salvar","AlterarMaquina()","margin-top:80px","loadingSalvar") }}
 
         </div>
         </div>
@@ -172,7 +172,7 @@
             <input type="text" class="form-control" placeholder="Insira o nome do tema" ng-model="NovoTemaValue">
           </div>
 
-          {{ fields.button("CADASTRAR TEMA","cadastraTema(NovoTemaValue)","") }}
+          {{ fields.button("CADASTRAR TEMA","cadastraTema(NovoTemaValue)","","loadingTema") }}
 
         </div>
         
@@ -194,7 +194,7 @@
             {{fields.checkField(3,"Ativo","ATIVA","INATIVA","Selected.ativa",id="toggle-demo2")}}
           </div>
           
-          {{ fields.button("Salvar Status","salvarStatus()","") }}
+          {{ fields.button("Salvar Status","salvarStatus()","","loadingSalvar") }}
 
         </div>
         
