--- a/app/templates/maquinas/maquinas.html
+++ b/app/templates/maquinas/maquinas.html
@@ -64,11 +64,9 @@
         <!-- /.card-header -->
         <div class="card-body table-responsive p-0">
 
-          <div class="d-flex justify-content-center" style="margin: 10px;" ng-hide="lista.length">
-            <div class="spinner-border" role="status">
-              <span class="sr-only">Loading...</span>
-            </div>
-          </div>
+          {{fields.loading("lista.length")}}
+
+         
 
           <table class="table table-hover text-nowrap" ng-show="lista.length">
             <thead>
