--- a/app/templates/usuarios/usuarios.html
+++ b/app/templates/usuarios/usuarios.html
@@ -64,11 +64,7 @@
         <!-- /.card-header -->
         <div class="card-body table-responsive p-0">
 
-          <div class="d-flex justify-content-center" style="margin: 10px;" ng-hide="usuarios.length">
-            <div class="spinner-border" role="status">
-              <span class="sr-only">Loading...</span>
-            </div>
-          </div>
+          {{fields.loading("usuarios.length")}}
 
 
           <table class="table table-hover text-nowrap" ng-show="usuarios.length" ng-cloak>
